<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="github_link_address">Github Link Address</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="submit_project">Submit Project</string>
    <string name="app_bar_logo">App bar logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learning_fragment_tag">Learning Leaders</string>
    <string name="skill_fragment_tag">Skill IQ Leaders</string>
    <string name="user_image">user image</string>
    <string name="user_name">user name</string>
    <string name="user_country">user country</string>
    <string name="user_details">user Details</string>
    <string name="user_detail_learning">Learning Hours</string>
    <string name="error_loading_data_from_server">Error Loading Data From Server</string>

</resources>