<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:minHeight="@dimen/list_item_height"
    android:orientation="horizontal">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="15"
            android:contentDescription="@string/user_image"
            android:padding="8dp"
            android:src="@drawable/top_learner" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="85"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/user_details"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

</RelativeLayout>
