<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    android:orientation="vertical"
    tools:context=".SubmitActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_black"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <androidx.appcompat.widget.Toolbar
                    android:layout_gravity="center"
                    android:id="@+id/back_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_bar_logo"
                        android:fitsSystemWindows="true"
                        android:src="@drawable/app_bar" />

                </androidx.appcompat.widget.Toolbar>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/color_black"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/submit_project"
                    android:textAlignment="center"
                    android:textColor="@color/color_final_btn"
                    android:textColorHighlight="@color/color_final_btn"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@drawable/underline" />

        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:hint="@string/first_name"
                app:boxBackgroundColor="@color/color_white"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/text_radius"
                app:boxCornerRadiusBottomStart="@dimen/text_radius"
                app:boxCornerRadiusTopEnd="@dimen/text_radius"
                app:boxCornerRadiusTopStart="@dimen/text_radius"
                app:boxStrokeColor="@android:color/transparent"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_baseline_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:hint="@string/last_name"
                app:boxBackgroundColor="@color/color_white"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/text_radius"
                app:boxCornerRadiusBottomStart="@dimen/text_radius"
                app:boxCornerRadiusTopEnd="@dimen/text_radius"
                app:boxCornerRadiusTopStart="@dimen/text_radius"
                app:boxStrokeColor="@android:color/transparent"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_baseline_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:hint="@string/email_address"
            app:boxBackgroundColor="@color/color_white"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="@dimen/text_radius"
            app:boxCornerRadiusBottomStart="@dimen/text_radius"
            app:boxCornerRadiusTopEnd="@dimen/text_radius"
            app:boxCornerRadiusTopStart="@dimen/text_radius"
            app:boxStrokeColor="@android:color/transparent"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:hint="@string/github_link_address"
            app:boxBackgroundColor="@color/color_white"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="@dimen/text_radius"
            app:boxCornerRadiusBottomStart="@dimen/text_radius"
            app:boxCornerRadiusTopEnd="@dimen/text_radius"
            app:boxCornerRadiusTopStart="@dimen/text_radius"
            app:boxStrokeColor="@android:color/transparent"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_github_brands">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/github_link_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/final_submit_button"
            android:layout_width="@dimen/button_final_width"
            android:layout_height="@dimen/button_final_height"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="24sp"
            app:backgroundTint="@null"
            app:cornerRadius="@dimen/button_radius" />
    </LinearLayout>
</LinearLayout>
